@@ -1,5 +1,5 @@
 /*
- * Copyright 2020-2024 the original author or authors.
+ * Copyright 2020-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,10 +18,12 @@ package org.springframework.graphql.server.webflux;
 
 
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
+import org.springframework.graphql.MediaTypes;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
@@ -30,10 +32,13 @@ import org.springframework.mock.web.server.MockServerWebExchange;
 import org.springframework.web.reactive.function.server.RequestPredicate;
 import org.springframework.web.reactive.function.server.RouterFunctions;
 import org.springframework.web.reactive.function.server.ServerRequest;
+import org.springframework.web.server.NotAcceptableStatusException;
 import org.springframework.web.server.ServerWebExchange;
+import org.springframework.web.server.UnsupportedMediaTypeStatusException;
 import org.springframework.web.util.pattern.PathPatternParser;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 /**
  * Tests for {@link GraphQlRequestPredicates}.
@@ -92,21 +97,39 @@ class GraphQlRequestPredicatesTests {
 		}
 
 		@Test
-		void shouldRejectRequestWithDifferentContentType() {
+		void shouldRejectRequestWithIncompatibleContentType() {
 			ServerWebExchange exchange = createMatchingHttpExchange()
-					.mutate().request(req -> req.headers(headers -> headers.setContentType(MediaType.TEXT_HTML)))
+					.mutate().request(request -> request.headers(h -> h.setContentType(MediaType.TEXT_HTML)))
 					.build();
 			ServerRequest serverRequest = ServerRequest.create(exchange, Collections.emptyList());
 			assertThat(httpPredicate.test(serverRequest)).isFalse();
 		}
 
 		@Test
+		void shouldRejectRequestWithInvalidContentType() {
+			ServerWebExchange exchange = createMatchingHttpExchange()
+					.mutate().request(request -> request.headers(h -> h.set("Content-Type", "bogus")))
+					.build();
+			ServerRequest request = ServerRequest.create(exchange, Collections.emptyList());
+			assertThatThrownBy(() -> httpPredicate.test(request)).isInstanceOf(UnsupportedMediaTypeStatusException.class);
+		}
+
+		@Test
 		void shouldRejectRequestWithIncompatibleAccept() {
 			ServerWebExchange exchange = createMatchingHttpExchange()
-					.mutate().request(req -> req.headers(headers -> headers.setAccept(Collections.singletonList(MediaType.TEXT_HTML))))
+					.mutate().request(request -> request.headers(h -> h.setAccept(List.of(MediaType.TEXT_HTML))))
 					.build();
 			ServerRequest serverRequest = ServerRequest.create(exchange, Collections.emptyList());
 			assertThat(httpPredicate.test(serverRequest)).isFalse();
+		}
+
+		@Test
+		void shouldRejectRequestWithInvalidAccept() {
+			ServerWebExchange exchange = createMatchingHttpExchange()
+					.mutate().request(request -> request.headers(h -> h.set("Accept", "bogus")))
+					.build();
+			ServerRequest request = ServerRequest.create(exchange, Collections.emptyList());
+			assertThatThrownBy(() -> httpPredicate.test(request)).isInstanceOf(NotAcceptableStatusException.class);
 		}
 
 		@Test
@@ -131,7 +154,7 @@ class GraphQlRequestPredicatesTests {
 		private MockServerWebExchange createMatchingHttpExchange() {
 			MockServerHttpRequest request = MockServerHttpRequest.post("/graphql")
 					.contentType(MediaType.APPLICATION_JSON)
-					.accept(MediaType.APPLICATION_JSON, MediaType.APPLICATION_GRAPHQL_RESPONSE)
+					.accept(MediaType.APPLICATION_JSON, MediaTypes.APPLICATION_GRAPHQL_RESPONSE)
 					.build();
 			return MockServerWebExchange.from(request);
 		}
